@@ -31,6 +31,9 @@
 #ifdef STDC_HEADERS
 #include <string.h>
 #endif /* STDC_HEADERS */
+#if HAVE_ALLOCA_H
+#include <alloca.h>
+#endif /* HAVE_ALLOCA_H */
 #include <errno.h>
 
 #include "freeipmi/driver/ipmi-ssif-driver.h"
